--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Preview diff
 
 # Controls when the workflow will run
 on:
@@ -22,10 +22,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name "Checkout repo"
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
-          fetch-depth:0
+          fetch-depth: 0
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
