--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: git diff main hello
+        run: git log -1
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git checkout hello
+          git diff main hello
