--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,9 +4,9 @@ name: Preview diff
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  issue_comment:
+    types:
+    - created
   pull_request:
     branches: [ "main" ]
 
@@ -18,6 +18,7 @@ jobs:
   preview:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == '/diff'}}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -33,7 +34,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          git checkout hello
+          git checkout main
           git diff main hello > ${{ github.workspace }}/diff.txt
           
       - uses: actions/upload-artifact@v3
