--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          git checkout main
+          git checkout hello
           git diff main hello > ${{ github.workspace }}/diff.txt
           
       - uses: actions/upload-artifact@v3
