--- a/.github/workflows/kustomize-diff.yml
+++ b/.github/workflows/kustomize-diff.yml
@@ -1,5 +1,8 @@
 name: kustomize-diff
 on:
+  issue_comment:
+    types:
+    - created
   pull_request:
     paths:
       - 'envs/qa/**'
@@ -7,13 +10,14 @@ on:
 jobs:
   kustomize-diff:
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == '/diff'}}
     steps:
       - id: checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - id: kustomize-diff
-        uses: swade1987/github-action-kustomize-diff@master
+        uses: swade1987/github-action-kustomize-diff@v0.0.3
       - id: comment
         uses: unsplash/comment-on-pr@master
         env:
