--- a/.github/workflows/kustomize2.yml
+++ b/.github/workflows/kustomize2.yml
@@ -1,10 +1,18 @@
 name: 'Kustomize GitHub Actions'
 on:
-  - pull_request
+  issue_comment:
+    types:
+    - created
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   kustomize:
     name: 'Kustomize'
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == '/diff'}}
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
