--- a/.github/workflows/kustomize-diff.yml
+++ b/.github/workflows/kustomize-diff.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.issue.pull_request && github.event.comment.body == '/diff'}}
     steps:
+      - uses: xt0rted/pull-request-comment-branch@v1
+        id: comment-branch    
       - id: checkout
         uses: actions/checkout@v2
         with:
