--- a/envs/staging-us/settings.yml
+++ b/envs/staging-us/settings.yml
@@ -11,6 +11,8 @@ spec:
         env:
         - name: UI_THEME
           value: "light"
+        - name: CACHE_SIZE
+          value: "1024kb"          
         - name: PAGE_LIMIT
           value: "25"
         - name: SORTING
